# wwsvc-rs

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: tests.yml
examples/: cursor.rs  derive.rs  general.rs  http_string.rs
src/: app_hash.rs  async_client.rs  client.rs  credentials.rs  cursor.rs  cursor_response.rs  error.rs  lib.rs  macros.rs  params.rs  requests.rs  responses.rs  traits.rs
tests/: client.rs  derive.rs
wwsvc-rs/: Cargo.toml
wwsvc-rs-derive/: Cargo.toml
wwsvc-rs-derive/src/: lib.rs
wwsvc-rs/examples/: derive.rs  general.rs
wwsvc-rs/src/: client.rs  credentials.rs  lib.rs  macros.rs
wwsvc-rs/tests/: derive.rs
