[package]
name = "wwsvc-rs"
version = "2.0.0"
edition = "2018"
license = "MIT"
authors = ["cozyGalvinsim <jean@der-capta.in>"]
description = "A web client which is used to consume SoftENGINE's WEBSERVICES, a proprietary API for their software WEBWARE."
repository = "https://github.com/cozyGalvinism/wwsvc-rs"
exclude = [".gitignore", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
encoding_rs = "0.8"
httpdate = "1.0"
md5 = "0.7"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
