[workspace]
members = ["wwsvc-rs-derive"]
resolver = "2"

[workspace.package]
version = "3.1.2"
authors = ["cozyGalvinsim <jean@der-capta.in>"]
license = "MIT"
repository = "https://github.com/cozyGalvinism/wwsvc-rs"
edition = "2021"
rust-version = "1.74.0"

[package]
name = "wwsvc-rs"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version.workspace = true
description = "A web client which is used to consume SoftENGINE's WEBSERVICES, a proprietary API for their software WEBWARE."
include = ["src/**/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"], default-features = false }
encoding_rs = "0.8"
httpdate = "1.0"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
miette = "7.1"
typed-builder = "0.18"
url = "2.5"
wwsvc-rs-derive = { path = "./wwsvc-rs-derive", optional = true, version = "3.1.2" }
async-trait = { version = "0.1", optional = true }
futures = "0.3"

[features]
default = ["native-tls"]
derive = ["dep:wwsvc-rs-derive", "dep:async-trait"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.36", features = ["full"] }

