[workspace]
members = ["wwsvc-rs-derive"]
resolver = "2"

[workspace.package]
version = "4.2.0"
authors = ["cozyGalvinsim <jean@der-capta.in>"]
license = "MIT"
repository = "https://github.com/cozyGalvinism/wwsvc-rs"
edition = "2021"
rust-version = "1.74.0"

[package]
name = "wwsvc-rs"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version.workspace = true
description = "A web client which is used to consume SoftENGINE's WEBSERVICES, a proprietary API for their software WEBWARE."
include = ["src/**/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.13", features = [
    "json",
    "gzip",
    "deflate",
], default-features = false }
encoding_rs = "0.8"
httpdate = "1.0"
md5 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
miette = "7.1"
typed-builder = "0.23"
url = "2.5"
wwsvc-rs-derive = { path = "./wwsvc-rs-derive", optional = true, version = "4.2.0" }
async-trait = { version = "0.1", optional = true }
futures = "0.3"
tokio = { version = "1.48", features = ["sync"] }
tracing = "0.1.44"

[features]
default = ["native-tls"]
derive = ["dep:wwsvc-rs-derive", "dep:async-trait"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.48", features = ["full"] }
init-tracing-opentelemetry = { version = "0.34", features = ["tracing_subscriber_ext"] }
