[package]
name = "wwsvc-rs-derive"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Derive macros for wwsvc-rs"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = "2.0.18"
