[package]
name = "wwsvc-rs"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "A web client which is used to consume SoftENGINE's WEBSERVICES, a proprietary API for their software WEBWARE."
include = ["src/**/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
encoding_rs = "0.8"
httpdate = "1.0"
md5 = "0.7"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
miette = "5.7.0"
http = "0.2.9"
typed-builder = "0.14.0"
url = "2.3.1"
async-stream = { version = "0.3.5", optional = true }
futures-core = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", optional = true }
wwsvc-rs-derive = { path = "../wwsvc-rs-derive", optional = true, version = "=3.0.0-pre.18" }
async-trait = { version = "0.1.68", optional = true }

[features]
default = ["stream"]
stream = ["dep:async-stream", "dep:futures-core", "dep:futures-util"]
derive = ["dep:wwsvc-rs-derive", "dep:async-trait"]

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
